--- a/indexbestel.html
+++ b/indexbestel.html
@@ -4,217 +4,221 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sultan's Car Empire</title>
+  <title>Sultan's Car Empire - Bestellen</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* NAVBAR */
+    .navbar {
+      background-color: #333;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      padding: 15px 0;
+    }
+
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      padding: 14px 20px;
+      font-size: 18px;
+    }
+
+    .navbar a:hover {
+      background-color: #575757;
+    }
+
+    .container {
+      width: 20%;
+      max-width: 900px;
+      background: white;
+      margin: 50px auto;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    label {
+      font-size: 18px;
+      font-weight: bold;
+      display: block;
+      margin-bottom: 8px;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .checkbox-group {
+      display: flex;
+      align-items: center;
+    }
+
+    .checkbox-group input {
+      width: auto;
+      margin-right: 10px;
+    }
+
+    .btn-submit {
+      display: block;
+      width: 100%;
+      background-color: #28a745;
+      color: white;
+      font-size: 20px;
+      padding: 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .btn-submit:hover {
+      background-color: #218838;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 16px;
+      background-color: #222;
+      color: white;
+      margin-top: 20px;
+    }
+  </style>
 </head>
-
-
-<script>
-  function openNav() {
-    document.querySelector(".sidebar").style.width = "160px";
-  }
-  
-  function closeNav() {
-    document.querySelector(".sidebar").style.width = "0";
-  }
-  </script>
-  
 
 <body>
 
 
-
-
-  <div class="banner">
-
-  
-<div class="sidebar">
-  <a href="#">About</a>
-  <a href="#">AUDI</a>
-  <a href="#">BMW</a>
-  <a href="#">Contact</a>
-  <h3>Prijsrange:</h3>
-  <label for="priceRange">Prijs: €<span id="minPrice">20</span> - €<span id="maxPrice">100</span></label>
-  <input type="range" id="priceSlider" min="20" max="100" value="100" step="1">
-  <button class="openbtn" onclick="openNav()">☰ Menu</button>
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-
-
-</div>
-
-
-<div class="main">
-  ...
-</div>
-    >
-    <button class="openbtn" onclick="openNav()">&#9776; Menu</button>
-
-    <!-- Load an icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <div class="navbar">
-      <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-      <a href="search.html"><i class="fa fa-fw fa-search"></i> Search</a>
-      <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-      <a href="login.html"><i class="fa fa-fw fa-user"></i> Login</a>
-      <a href="indexbestel.html"><i class="fa fa-fw fa-shopping-cart"></i> Checkout</a>
-  </div>
-  
-
-
-    <div class="banner-content">
-      <h1 img>Welkom bij Sultan's Car Empire</h1>
-    </div>
-  </div>
-<html lang="nl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bestelformulier</title>
-    <link rel="stylesheet" href="bestel/css/style.css">
-    <script defer src="assets/js/validatie.js"></script>
-</head>
-
-<body>
-
-</body>
-
-</html>
-
-
-
-    <div class="container">
-        <h2>Bestelformulier</h2>
-        <form id="indexbestelformulier" novalidate>
-
-            <div class="form-group">
-                <label for="aanhef">Aanhef:</label>
-                <select id="aanhef" name="aanhef" required>
-                    <option value="">Selecteer</option>
-                    <option value="Dhr.">Dhr.</option>
-                    <option value="Mevr.">Mevr.</option>
-                    <option value="Anders">Anders</option>
-                </select>
-                <span class="error" id="aanhefError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="voornaam">Voornaam:</label>
-                <input type="text" id="voornaam" name="voornaam" required>
-                <span class="error" id="voornaamError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="tussenvoegsel">Tussenvoegsel:</label>
-                <input type="text" id="tussenvoegsel" name="tussenvoegsel">
-            </div>
-
-            <div class="form-group">
-                <label for="achternaam">Achternaam:</label>
-                <input type="text" id="achternaam" name="achternaam" required>
-                <span class="error" id="achternaamError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="straat">Straatnaam:</label>
-                <input type="text" id="straat" name="straat" required>
-                <span class="error" id="straatError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="huisnummer">Huisnummer:</label>
-                <input type="text" id="huisnummer" name="huisnummer" required>
-                <span class="error" id="huisnummerError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="postcode">Postcode:</label>
-                <input type="text" id="postcode" name="postcode" required>
-                <span class="error" id="postcodeError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="land">Land:</label>
-                <select id="land" name="land" required>
-                    <option value="">Selecteer een land</option>
-                    <option value="Nederland">Nederland</option>
-                    <option value="Albanie">Albanie</option>
-                    <option value="Brazilie">Brazilie</option>
-                    <option value="Duitsland">Duitsland</option>
-                    <option value="Italie">Italie</option>
-                    <option value="Kroatie">Kroatie</option>
-                </select>
-                <span class="error" id="landError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="email">E-mailadres:</label>
-                <input type="email" id="email" name="email" required>
-                <span class="error" id="emailError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="telefoon">Telefoonnummer:</label>
-                <input type="tel" id="telefoon" name="telefoon" required>
-                <span class="error" id="telefoonError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="geboortedatum">Geboortedatum:</label>
-                <input type="date" id="geboortedatum" name="geboortedatum" required>
-                <span class="error" id="geboortedatumError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="auto">Gekozen auto:</label>
-                <select id="auto" name="auto" required>
-                    <option value="">Selecteer een auto</option>
-                    <option value="Audi RS5">Audi RS5</option>
-                    <option value="BMW M5">BMW M5</option>
-                    <option value="Audi RS3">Audi RS3</option>
-                    <option value="BMW 118">BMW 118</option>
-                    <option value="RS6">Audi RS6</option>
-                    <option value="TT">Audi TT</option>
-                </select>
-                <span class="error" id="autoError"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="aantal">Aantal:</label>
-                <input type="number" id="aantal" name="aantal" min="1" required>
-                <span class="error" id="aantalError"></span>
-            </div>
-
-            <div class="form-group">
-                <input type="checkbox" id="voorwaarden" name="voorwaarden" required>
-                <label for="voorwaarden">Ik ga akkoord met de algemene voorwaarden</label>
-                <span class="error" id="voorwaardenError"></span>
-            </div>
-
-            <button type="submit" class="btn-submit">Bestelling plaatsen</button>
-        </form>
-    </div>
-
-      
-
-      <footer class="footer">
-        <p>&copy; 2025 Sultan's Car Empire. Alle rechten voorbehouden.</p>
-      </footer>
-      
-
-    </div>
-
+  <div class="navbar">
+    <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="search.html"><i class="fa fa-fw fa-search"></i> Search</a>
+    <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+    <a href="login.html"><i class="fa fa-fw fa-user"></i> Login</a>
   </div>
 
+  <div class="container">
+    <h2>Bestelformulier</h2>
+    <form id="bestelformulier" novalidate>
 
+      <div class="form-group">
+        <label for="aanhef">Aanhef:</label>
+        <select id="aanhef" name="aanhef" required>
+          <option value="">Selecteer</option>
+          <option value="Dhr.">Dhr.</option>
+          <option value="Mevr.">Mevr.</option>
+          <option value="Anders">Anders</option>
+        </select>
+      </div>
 
+      <div class="form-group">
+        <label for="voornaam">Voornaam:</label>
+        <input type="text" id="voornaam" name="voornaam" placeholder="Uw voornaam" required>
+      </div>
 
+      <div class="form-group">
+        <label for="tussenvoegsel">Tussenvoegsel:</label>
+        <input type="text" id="tussenvoegsel" name="tussenvoegsel" placeholder="(Optioneel)">
+      </div>
 
+      <div class="form-group">
+        <label for="achternaam">Achternaam:</label>
+        <input type="text" id="achternaam" name="achternaam" placeholder="Uw achternaam" required>
+      </div>
 
+      <div class="form-group">
+        <label for="straat">Straatnaam:</label>
+        <input type="text" id="straat" name="straat" placeholder="Straatnaam" required>
+      </div>
 
+      <div class="form-group">
+        <label for="huisnummer">Huisnummer:</label>
+        <input type="text" id="huisnummer" name="huisnummer" placeholder="Nr." required>
+      </div>
 
+      <div class="form-group">
+        <label for="postcode">Postcode:</label>
+        <input type="text" id="postcode" name="postcode" placeholder="1234 AB" required>
+      </div>
 
+      <div class="form-group">
+        <label for="land">Land:</label>
+        <select id="land" name="land" required>
+          <option value="">Selecteer een land</option>
+          <option value="Nederland">Nederland</option>
+          <option value="Duitsland">Duitsland</option>
+          <option value="België">België</option>
+          <option value="Frankrijk">Frankrijk</option>
+          <option value="Spanje">Spanje</option>
+          <option value="Italië">Italië</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="email">E-mailadres:</label>
+        <input type="email" id="email" name="email" placeholder="Uw e-mail" required>
+      </div>
+
+      <div class="form-group">
+        <label for="telefoon">Telefoonnummer:</label>
+        <input type="tel" id="telefoon" name="telefoon" placeholder="+31 6 12345678" required>
+      </div>
+
+      <div class="form-group">
+        <label for="geboortedatum">Geboortedatum:</label>
+        <input type="date" id="geboortedatum" name="geboortedatum" required>
+      </div>
+
+      <div class="form-group">
+        <label for="auto">Gekozen auto:</label>
+        <select id="auto" name="auto" required>
+          <option value="">Selecteer een auto</option>
+          <option value="Audi RS5">Audi RS5</option>
+          <option value="BMW M5">BMW M5</option>
+          <option value="Audi RS3">Audi RS3</option>
+          <option value="BMW 118">BMW 118</option>
+          <option value="Audi RS6">Audi RS6</option>
+          <option value="Audi TT">Audi TT</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="aantal">Aantal:</label>
+        <input type="number" id="aantal" name="aantal" min="1" required>
+      </div>
+
+      <div class="form-group checkbox-group">
+        <input type="checkbox" id="voorwaarden" name="voorwaarden" required>
+        <label for="voorwaarden">Ik ga akkoord met de <a href="voorwaarden.html" target="_blank">algemene voorwaarden</a></label>
+      </div>
+
+      <button type="submit" class="btn-submit">Bestelling plaatsen</button>
+
+    </form>
+  </div>
+
+  <footer class="footer">
+    <p>&copy; 2025 Sultan's Car Empire. Alle rechten voorbehouden.</p>
+  </footer>
 
 </body>
 
