--- a/indexbestel.html
+++ b/indexbestel.html
@@ -14,7 +14,7 @@
       padding: 0;
     }
 
-    /* NAVBAR */
+    
     .navbar {
       background-color: #333;
       overflow: hidden;
@@ -106,14 +106,15 @@
   </style>
 </head>
 
+
 <body>
 
 
   <div class="navbar">
-    <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="search.html"><i class="fa fa-fw fa-search"></i> Search</a>
-    <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-    <a href="login.html"><i class="fa fa-fw fa-user"></i> Login</a>
+    <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+    <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
   </div>
 
   <div class="container">
