--- a/real.html
+++ b/real.html
@@ -18,28 +18,32 @@
 
 <body>
 
+  <div class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="#">Home</a>
+    <a href="#">Zoeken</a>
+    <a href="#">Contact</a>
+    <a href="#">Login</a>
+    <a href="indexbestel.html">Checkout</a>
+  </div>
+  
+
   <div class="banner">
-    <div class="sidebar">
-      <a href="#">About</a>
-      <a href="#">AUDI</a>
-      <a href="#">BMW</a>
-      <a href="#">Contact</a>
-      <h3>Prijsrange:</h3>
-      <label for="priceSlider">Prijs: €<span id="minPrice">10.000</span> - €<span id="maxPrice">250.000</span></label>
-      <input type="range" id="priceSlider" min="20" max="100" value="100" step="1">
-    </div>
+    <label for="priceSlider">Prijs: €<span id="minPrice">10.000</span> - €<span id="maxPrice">250.000</span></label>
+    <input type="range" id="priceSlider" min="20" max="100" value="100" step="1">
   </div>
 
   <div class="navbar">
-    <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">☰ Menu</span>
+
+    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
     <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
     <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
     <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-    <a href="indexbestel.html"><i class="fa fa-fw fa-shopping-cart"></i> Checkout</a>
+    <a href="indexbestel.html"><i class="fa fa-fw fa-shopping-cart"></i> Checkout (<span id="cart-count">0</span>)</a>
     <img src="/assets/img/logo.png" alt="Logo">
   </div>
 
- 
   <div class="container">
 
     <div class="product-card">
@@ -57,7 +61,7 @@
     <div class="product-card">
       <h2>BMW M5</h2>
       <h3>50.000km stand</h3>
-      <h4>Touring xDrive Competition | Facelift, Goodwood Green,Carbon</h4>
+      <h4>Touring xDrive Competition | Facelift, Goodwood Grhijbk,vvhjcckcyftui</h4>
       <img src="image_copy_.png" alt="BMW M5">
       <div class="prijs">€162.500</div>
       <button class="add-to-cart">Add to cart</button>
@@ -154,7 +158,7 @@
       <h4>Touring xDrive Competition | Facelift, Goodwood Grhijbk,vvhjcckcyftui</h4>
       <img src="image_copy_.png" alt="BMW M5">
       <div class="prijs">€162.500</div>
-   =<button class="add-to-cart">Add to cart</button>
+      <button class="add-to-cart">Add to cart</button>
 
     </div>
 
@@ -272,30 +276,23 @@
 
     </div>
     
-  </div>
+
+    
+
   <footer class="footer">
     <p>&copy; 2025 Sultan's Car Empire. Alle rechten voorbehouden.</p>
   </footer>
 
-
   <script>
-    let cartCount = 0;
-
-    function updateCartCount() {
-      document.getElementById("cart-count").textContent = cartCount;
-    }
-
     document.addEventListener("DOMContentLoaded", function () {
+      let cartCount = 0;
+      const cartCountElement = document.getElementById("cart-count");
       const addToCartButtons = document.querySelectorAll(".add-to-cart");
-      const checkoutButton = document.querySelector(".navbar a[href='indexbestel.html']");
-
-  
-      checkoutButton.innerHTML += ' (<span id="cart-count">0</span>)';
 
       addToCartButtons.forEach(button => {
         button.addEventListener("click", function () {
           cartCount++;
-          updateCartCount();
+          cartCountElement.textContent = cartCount;
         });
       });
     });
