15 maart avond webshop

--- a/real.html
+++ b/real.html
@@ -20,22 +20,14 @@
 
   <div class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="#">Home</a>
-    <a href="#">Zoeken</a>
-    <a href="#">Contact</a>
-    <a href="#">Login</a>
-    <a href="indexbestel.html">Checkout</a>
+    <a href="#">Audi
+    <a href="#">Bmw
+    <a href="#">Over ons
   </div>
   
 
-  <div class="banner">
-    <label for="priceSlider">Prijs: €<span id="minPrice">10.000</span> - €<span id="maxPrice">250.000</span></label>
-    <input type="range" id="priceSlider" min="20" max="100" value="100" step="1">
-  </div>
-
   <div class="navbar">
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">☰ Menu</span>
-
     <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
     <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
     <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
