--- a/indexbestel.html
+++ b/indexbestel.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sultan's Car Empire - Bestellen</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,7 +15,6 @@
       padding: 0;
     }
 
-    
     .navbar {
       background-color: #333;
       overflow: hidden;
@@ -35,7 +35,7 @@
     }
 
     .container {
-      width: 20%;
+      width: 90%;
       max-width: 900px;
       background: white;
       margin: 50px auto;
@@ -95,40 +95,29 @@
       background-color: #218838;
     }
 
-    .footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 16px;
-      background-color: #222;
-      color: white;
-      margin-top: 20px;
-    }
   </style>
 </head>
 
-
 <body>
 
-
   <div class="navbar">
-    <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-    <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+    <a href="#"><i class="fa fa-home"></i> Home</a>
+    <a href="#"><i class="fa fa-search"></i> Search</a>
+    <a href="#"><i class="fa fa-envelope"></i> Contact</a>
+    <a href="#"><i class="fa fa-user"></i> Login</a>
   </div>
 
   <div class="container">
     <h2>Bestelformulier</h2>
-    <form id="bestelformulier" novalidate>
+    <form id="bestelformulier">
 
       <div class="form-group">
-        <label for="aanhef">Aanhef:</label>
-        <select id="aanhef" name="aanhef" required>
-          <option value="">Selecteer</option>
-          <option value="Dhr.">Dhr.</option>
-          <option value="Mevr.">Mevr.</option>
-          <option value="Anders">Anders</option>
-        </select>
+        <label>Aanhef:</label>
+        <div class="aanhef-options">
+          <label for="aanhef_dhr"><input type="radio" id="aanhef_dhr" name="aanhef" value="dhr" required /> Dhr.</label>
+          <label for="aanhef_mevr"><input type="radio" id="aanhef_mevr" name="aanhef" value="mevr" /> Mevr.</label>
+          <label for="aanhef_anders"><input type="radio" id="aanhef_anders" name="aanhef" value="anders" /> Anders</label>
+        </div>
       </div>
 
       <div class="form-group">
@@ -217,9 +206,51 @@
     </form>
   </div>
 
-  <footer class="footer">
+
+   <!-- Footer --><!-- Footer -->
+<footer class="footer">
+  <div class="footer-container">
+    
+    <div class="footer-section">
+      <h3>VEILIG BETALEN</h3>
+      <p>Betaal in alle veiligheid met onze partners</p>
+      <div class="payment-methods">
+        <img src="mastercard.png" alt="Mastercard">
+        <img src="visa.png" alt="Visa">
+        <img src="paypal.png" alt="PayPal">
+      </div>
+    </div>
+
+    <div class="footer-section">
+      <h3>LEVERINGSKOSTEN</h3>
+      <p>Transport tarieven</p>
+    </div>
+
+    <div class="footer-section">
+      <h3>KLANTENSERVICE</h3>
+      <p>- Wachtwoord vergeten</p>
+      <p>- Veilig Betaling</p>
+      <p>- Levering</p>
+      <p>- Annuleren, retourneren en ruilen</p>
+    </div>
+
+    <div class="footer-section">
+      <h3>OVER ONS</h3>
+      <p>- Over ons</p>
+      <p>- Contactformulier</p>
+      <p>- Algemene voorwaarden</p>
+      <p>- Privacy beleid</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
     <p>&copy; 2025 Sultan's Car Empire. Alle rechten voorbehouden.</p>
-  </footer>
+  </div>
+</footer>
+
+<!-- Footer CSS -->
+
+</style>
 
 </body>
 
