--- a/real.html
+++ b/real.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.6.1/nouislider.min.css">
 
+
   <!-- JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.6.1/nouislider.min.js"></script>
   <script>
@@ -22,14 +23,17 @@
   </script>
 </head>
 
+<style></style>
+
 <body>
 
   <!-- Sidebar -->
   <div class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="#">Audi</a>
-    <a href="#">BMW</a>
-    <a href="#">Over ons</a>
+    <div class="aanhef-options">
+      <label for="AUDI"><input type="radio" id="AUDI" name="aanhef" value="AUDI" required /> AUDI.</label>
+      <label for="BMW"><input type="radio" id=BMW" name="BMW" value="BMW" /> BMW.</label>
+    </div>
 
     <!-- Prijslider -->
     <div class="price-filter">
@@ -132,7 +136,6 @@
       <button class="add-to-cart">Add to cart</button>
 
     </div>
-
 
 
     <div class="product-card">
@@ -249,10 +252,82 @@
 
     </div>
 
-  <!-- Footer -->
+    <div class="product-card">
+      <h2>Audi RS5</h2>
+      <h3>20.000km stand</h3>
+      <h4>Sportback 2.9 TFSI 450pk quattro Pano B&O Carbon H</h4>
+      <img src="image_.png" alt="Audi RS5">
+      <div class="prijs">€80.000</div>
+      <button class="add-to-cart">Add to cart</button>
+
+    </div>
+
+
+
+    <div class="product-card">
+      <h2>BMW M5</h2>
+      <h3>50.000km stand</h3>
+      <h4>Touring xDrive Competition | Facelift, Goodwood Green,8L</h4>
+      <img src="image_copy_.png" alt="BMW M5">
+      <div class="prijs">€162.500</div>
+      <button class="add-to-cart">Add to cart</button>
+
+    </div>
+
+    
+    <div class="product-card">
+      <h2>BMW 118</h2>
+      <h3>120.000km stand</h3>
+      <h4>1-serie 118i M Sport - Camera - Sportleder - Stoel</h4>
+      <img src="image_copy_3.png" alt="BMW 118">
+      <div class="prijs">€20.000</div>
+      <button class="add-to-cart">Add to cart</button>
+
+    </div>
+
+<!-- Footer -->
+<footer class="footer"><!-- Aangepaste Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Sultan's Car Empire. Alle rechten voorbehouden.</p>
+    <div class="footer-container">
+      
+      <div class="footer-section">
+        <h3>VEILIG BETALEN</h3>
+        <p>Betaal in alle veiligheid met onze partners</p>
+        <div class="payment-methods">
+          <img src="mastercard.png" alt="Mastercard">
+          <img src="visa.png" alt="Visa">
+          <img src="paypal.png" alt="PayPal">
+        </div>
+      </div>
+  
+      <div class="footer-section">
+        <h3>LEVERINGSKOSTEN</h3>
+        <p>Transport tarieven</p>
+      </div>
+  
+      <div class="footer-section">
+        <h3>KLANTENSERVICE</h3>
+        <p>- Wachtwoord vergeten</p>
+        <p>- Veilig Betaling</p>
+        <p>- Levering</p>
+        <p>- Annuleren, retourneren en ruilen</p>
+      </div>
+  
+      <div class="footer-section">
+        <h3>OVER ONS</h3>
+        <p>- Over ons</p>
+        <p>- Contactformulier</p>
+        <p>- Algemene voorwaarden</p>
+        <p>- Privacy beleid</p>
+      </div>
+    </div>
+  
+    <!-- Sub-footer voor copyright -->
+    <div class="footer-copyright">
+      <p>&copy; 2025 Sultan's Car Empire. Alle rechten voorbehouden.</p>
+    </div>
   </footer>
+  
 
   <!-- JavaScript voor prijslider en winkelwagen -->
   <script>
