--- a/indexbestel.html
+++ b/indexbestel.html
@@ -1,101 +1,11 @@
 <!DOCTYPE html>
 <html lang="nl">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sultan's Car Empire - Bestellen</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-
-    .navbar {
-      background-color: #333;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      padding: 15px 0;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      padding: 14px 20px;
-      font-size: 18px;
-    }
-
-    .navbar a:hover {
-      background-color: #575757;
-    }
-
-    .container {
-      width: 90%;
-      max-width: 900px;
-      background: white;
-      margin: 50px auto;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 {
-      text-align: center;
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
-
-    .form-group {
-      margin-bottom: 20px;
-    }
-
-    label {
-      font-size: 18px;
-      font-weight: bold;
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    .checkbox-group {
-      display: flex;
-      align-items: center;
-    }
-
-    .checkbox-group input {
-      width: auto;
-      margin-right: 10px;
-    }
-
-    .btn-submit {
-      display: block;
-      width: 100%;
-      background-color: #28a745;
-      color: white;
-      font-size: 20px;
-      padding: 15px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .btn-submit:hover {
-      background-color: #218838;
-    }
-
-  </style>
 </head>
 
 <body>
@@ -114,9 +24,9 @@
       <div class="form-group">
         <label>Aanhef:</label>
         <div class="aanhef-options">
-          <label for="aanhef_dhr"><input type="radio" id="aanhef_dhr" name="aanhef" value="dhr" required /> Dhr.</label>
-          <label for="aanhef_mevr"><input type="radio" id="aanhef_mevr" name="aanhef" value="mevr" /> Mevr.</label>
-          <label for="aanhef_anders"><input type="radio" id="aanhef_anders" name="aanhef" value="anders" /> Anders</label>
+          <label><input type="radio" name="aanhef" value="dhr" required> Dhr.</label>
+          <label><input type="radio" name="aanhef" value="mevr"> Mevr.</label>
+          <label><input type="radio" name="aanhef" value="anders"> Anders</label>
         </div>
       </div>
 
@@ -126,23 +36,13 @@
       </div>
 
       <div class="form-group">
-        <label for="tussenvoegsel">Tussenvoegsel:</label>
-        <input type="text" id="tussenvoegsel" name="tussenvoegsel" placeholder="(Optioneel)">
-      </div>
-
-      <div class="form-group">
         <label for="achternaam">Achternaam:</label>
         <input type="text" id="achternaam" name="achternaam" placeholder="Uw achternaam" required>
       </div>
 
       <div class="form-group">
-        <label for="straat">Straatnaam:</label>
-        <input type="text" id="straat" name="straat" placeholder="Straatnaam" required>
-      </div>
-
-      <div class="form-group">
-        <label for="huisnummer">Huisnummer:</label>
-        <input type="text" id="huisnummer" name="huisnummer" placeholder="Nr." required>
+        <label for="adres">Straatnaam & Huisnummer:</label>
+        <input type="text" id="adres" name="adres" placeholder="Straatnaam + Nr." required>
       </div>
 
       <div class="form-group">
@@ -157,9 +57,6 @@
           <option value="Nederland">Nederland</option>
           <option value="Duitsland">Duitsland</option>
           <option value="België">België</option>
-          <option value="Frankrijk">Frankrijk</option>
-          <option value="Spanje">Spanje</option>
-          <option value="Italië">Italië</option>
         </select>
       </div>
 
@@ -174,20 +71,11 @@
       </div>
 
       <div class="form-group">
-        <label for="geboortedatum">Geboortedatum:</label>
-        <input type="date" id="geboortedatum" name="geboortedatum" required>
-      </div>
-
-      <div class="form-group">
         <label for="auto">Gekozen auto:</label>
         <select id="auto" name="auto" required>
           <option value="">Selecteer een auto</option>
           <option value="Audi RS5">Audi RS5</option>
           <option value="BMW M5">BMW M5</option>
-          <option value="Audi RS3">Audi RS3</option>
-          <option value="BMW 118">BMW 118</option>
-          <option value="Audi RS6">Audi RS6</option>
-          <option value="Audi TT">Audi TT</option>
         </select>
       </div>
 
@@ -206,52 +94,5 @@
     </form>
   </div>
 
-
-   <!-- Footer --><!-- Footer -->
-<footer class="footer">
-  <div class="footer-container">
-    
-    <div class="footer-section">
-      <h3>VEILIG BETALEN</h3>
-      <p>Betaal in alle veiligheid met onze partners</p>
-      <div class="payment-methods">
-        <img src="mastercard.png" alt="Mastercard">
-        <img src="visa.png" alt="Visa">
-        <img src="paypal.png" alt="PayPal">
-      </div>
-    </div>
-
-    <div class="footer-section">
-      <h3>LEVERINGSKOSTEN</h3>
-      <p>Transport tarieven</p>
-    </div>
-
-    <div class="footer-section">
-      <h3>KLANTENSERVICE</h3>
-      <p>- Wachtwoord vergeten</p>
-      <p>- Veilig Betaling</p>
-      <p>- Levering</p>
-      <p>- Annuleren, retourneren en ruilen</p>
-    </div>
-
-    <div class="footer-section">
-      <h3>OVER ONS</h3>
-      <p>- Over ons</p>
-      <p>- Contactformulier</p>
-      <p>- Algemene voorwaarden</p>
-      <p>- Privacy beleid</p>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    <p>&copy; 2025 Sultan's Car Empire. Alle rechten voorbehouden.</p>
-  </div>
-</footer>
-
-<!-- Footer CSS -->
-
-</style>
-
 </body>
-
 </html>
